[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
nltk = "^3.7"
torch = "^1.12.0"
fastapi = "^0.78.0"
numpy = "^1.23.0"
tensorflow = "^2.9.1"
keras = "^2.9.0"
windows-curses = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
