[tool.poetry]
name = "chatbot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
nltk = "^3.7"
torch = "^1.12.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
numpy = "^1.23.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
